# quality-linter

./: .gitignore  README.md  dtos.py  json_schema.py  pyproject.toml
.github/workflows/: ci.yml  lint.yml
app/: func_for_test.py  github_api_client.py  llm_api_client.py  main.py  models_api_client.py  parser.py  prompt_builder.py  reviewer.py
benchmark/: benchmark.py
dataset-beta/file-1/: auto-review.json
dataset-beta/file-2/: auto-review-benchmark-1.json  auto-review-benchmark-3.json  auto-review.json
dataset/file_1/: auto-review-benchmark-1.json  auto-review-benchmark-2.json  auto-review-benchmark-3.json  auto-review-with-code-lines-enumeration.json  auto-review.json  code-review.json  code.json
dataset/file_10/: auto-review-benchmark-1.json  auto-review-benchmark-2.json  auto-review-with-code-lines-enumeration.json  auto-review.json  code-review.json  code.json  diffs.txt
dataset/file_2/: auto-review-benchmark-1.json  auto-review-benchmark-2.json  auto-review-benchmark-3.json  auto-review-with-code-lines-enumeration.json  auto-review.json  code-review.json  code.json  diffs.txt
dataset/file_3/: auto-review-benchmark-1.json  auto-review-benchmark-2.json  auto-review-with-code-lines-enumeration.json  auto-review.json  code-review.json  code.json  diffs.txt
dataset/file_4/: auto-review-benchmark-1.json  auto-review-benchmark-2.json  auto-review-with-code-lines-enumeration.json  auto-review.json  code-review.json  code.json  diffs.txt
tests/: test.py  test_models_api_client.py  test_parser.py  test_prompt_builder.py  test_reviewer.py
(+73 files in other folders)
