[project]
name = "quality-linter"
version = "0.0.1"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0"
]

[tool.ruff]
line-length = 120
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
]
ignore = ["E501"]
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
